k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pingtome-prod
  labels:
    env: production
    app: pingtome
